crates/uitest/fixtures/ty_check/effect_handle_invalid_raw.snap
---
source: crates/uitest/tests/ty_check.rs
expression: diags
input_file: fixtures/ty_check/effect_handle_invalid_raw.fe
---
error[6-0022]: invalid `EffectHandle::Raw` type
  ┌─ effect_handle_invalid_raw.fe:7:16
  │
7 │     type Raw = bool
  │                ^^^^ `bool` cannot represent an effect-handle address
  │
  = user-defined effect handles must use `*Target` and can only provide memory effects
